test/zinc_source/compile_errors/enums/09_wrong_enum_arm.zn
// expected-error: does not belong to enum 'Message'
enum Message {
    Quit
}

enum Other {
    Quit
}

fn main() {
    msg = Message.Quit
    match msg {
        Other.Quit => {
            print("bad")
        },
    }
}
